--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,7 +1,7 @@
 <h2>BOOKS</h2>
 
 <mat-form-field>
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="タイトルでフィルター" />
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="タイトル検索" />
 </mat-form-field>
 
 <div class="listArea mat-elevation-z8">
