--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,5 +1,3 @@
-<h2>BOOKS</h2>
-
 <mat-form-field>
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="タイトル検索" />
 </mat-form-field>
@@ -33,7 +31,7 @@
     <ng-container matColumnDef="dueDate">
       <th mat-header-cell *matHeaderCellDef>返却予定日</th>
       <td mat-cell *matCellDef="let element">
-        {{ element[0]?.dueDate !== null ? element[0]?.dueDate : "ー" }}
+        {{ element[0]?.dueDate !== null ? (element[0]?.dueDate | date: "yyyy年MM月dd日") : "ー" }}
       </td>
     </ng-container>
 
@@ -43,9 +41,11 @@
           class="example-element-detail"
           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'"
         >
-          <div class="hide-element-description">
-            {{ element[1]?.userName !== null ? "貸出中：" + element[1]?.userName : "貸出可能" }}
-          </div>
+          <mat-form-field class="example-full-width">
+            <input matInput [matDatepicker]="picker" placeholder="返却予定日" />
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker touchUi #picker></mat-datepicker>
+          </mat-form-field>
         </div>
       </td>
     </ng-container>
